--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -4,16 +4,13 @@
 {{> include/header}}
 <title>Angelo</title>
 <link rel="stylesheet" href="/css/reset.css" type="text/css">
-<link rel="stylesheet" href="/css/index.css" type="text/css">
-<script src="./js/jquery.js"></script>
+<link rel="stylesheet" href="/css/about.css" type="text/css">
+<script src="/js/jquery-2.2.0.min.js"></script>
 </head>
 
 <body>
 	{{> include/navigation}}
 	<div>
-
-
-
 		<div class="container-fluid">
 			<br />
 			<div class="row content">
@@ -37,6 +34,7 @@
 						<div id="container">
 							<div
 								style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
+								<header></header>
 								<section id="no1">
 									<div class="page-title">
 										<h1>Who am I</h1>
@@ -109,8 +107,8 @@
 										<ul class="prod-list">
 											<li><img src="images/JTLoan.jpg">
 												<div class="caption">
-													<a href="http://loan.jtchinae-bank.co.kr"
-														target="_blank">JT Loan Site</a>
+													<a href="http://loan.jtchinae-bank.co.kr" target="_blank">JT
+														Loan Site</a>
 													<h1>portfolio 1</h1>
 													<p>Direct Loan Site for Customer</p>
 													<p>Wep Application Developer</p>
