--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -47,7 +47,8 @@
 											<p>I’m the man who doesn’t give up challenges, enjoy
 												working with co-worker, and I always love the job that
 												challenges me to improve or solve programs when I meet
-												unexpected problems.</p>
+												unexpected problems. I. I strongly believe that my attitude
+												and skill background make me a good person.</p>
 										</div>
 									</div>
 								</section>
@@ -65,6 +66,8 @@
 										<div class="text">
 											<p>5162 Yonge St, North York</p>
 											<p>Near by North York Centre Station</p>
+											<p>I am work in North York, Toronto</p>
+											<p>I am work for JT Chinae Branch of Toronto</p>
 										</div>
 									</div>
 								</section>
@@ -80,18 +83,18 @@
 												style="border: 1px solid white; border-radius: 50%">
 										</div>
 										<div class="text">
-											<h2>FullStack Developer/Data Analyst</h2>
+											<h2>Full-Stack Developer/Leader</h2>
 											<ol>
-												<li>FullStack Developer.
-													<ul>Developer : From Front to Back.
-													</ul>
-													<ul>HTML5/CSS3/JavaScript/Java/Python/OracleDB.
+												<li><h2>(Front-End)</h2>
+													<ul>HTML5/CSS3/JavaScript(Vanilia JS).
 													</ul>
 												</li>
-												<li>Analyst : BigData/Deep Learning.
-													<ul>Web Scrapping/Data Pre-processing.
+												<li><h2>(Back-End)</h2>
+													<ul>Java/Python/OracleDB/Mysql.
 													</ul>
-													<ul>Visualization/DeepLearning Algorithm.
+												</li>
+												<li><h2>(Dev-Ops)</h2>
+													<ul>AWS/SpringBoot.
 													</ul>
 												</li>
 											</ol>
