--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -37,7 +37,7 @@
 								<header></header>
 								<section id="no1">
 									<div class="page-title">
-										<h1>Who am I</h1>
+										<h1>Who am I(Mad for Web development)</h1>
 									</div>
 									<div class="content">
 										<div class="photo">
