--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -56,7 +56,7 @@
 
 								<section id="no2">
 									<div class="page-title">
-										<h1>Where am I</h1>
+										<h1>Where am I(I Love Canada)</h1>
 									</div>
 									<div class="content">
 										<div class="photo">
