--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -13,6 +13,8 @@
 <script src="/js/jquery-ui.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
+<script src="/js/KoreaMapPathData.js"></script>
+<script src="/js/raphael.js"></script>
 <style>
     /* Add a gray background color and some padding to the footer */
     footer {
