--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>{{> include/header}}
+<head>
+{{> include/header}}
+<link rel="stylesheet" href="/css/koreamap.css" type="text/css">
 </head>
 
 <body>
 	{{> include/navigation}}
-	<section id="main_section">
-		<article id="main_article">
-			<p>njh</p>
-			<p>njh</p>
-			<p>njh</p>
-			<p>njh</p>
-			<p>njh</p>
-			<p>njh</p>
-		</article>
-		<figure id =-"map_image">
-		</figure>
-	</section>
+	<div>
+		<div class="container-fluid">
+			<section id="main_section">
+				<article id="main_article">
+					<p>njh</p>
+					<p>njh</p>
+					<p>njh</p>
+					<p>njh</p>
+					<p>njh</p>
+					<p>njh</p>
+				</article>
+				<figure id=-"map_image">
+				</figure>
+			</section>
+		</div>
+	</div>
 	<!-- 이미지로 버튼만들려면 -->
 	<a href="#" class="jcm-top"> <img src="./images/arrow-up.png"
 		style="margin-bottom: 24px; width: 45px;">
