--- a/src/main/resources/static/css/koreamap.css
+++ b/src/main/resources/static/css/koreamap.css
@@ -1,4 +1,6 @@
-
+#koreamap {width:960px; margin: 0 auto;}
 
 #main_section{overfolw: hidden;}
 #main_article{width: 460px; float:left;}
+#main_article{width: 500px; float:right;}
+figure{margin: 0; padding: 0;}
