--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -7,7 +7,7 @@
 
 <body>
 	{{> include/navigation}}
-	<div>
+	<div id ="koreamap">
 		<div class="container-fluid">
 			<section id="main_section">
 				<article id="main_article">
