--- a/src/main/resources/static/css/koreamap.css
+++ b/src/main/resources/static/css/koreamap.css
@@ -2,5 +2,5 @@
 
 #main_section{overfolw: hidden;}
 #main_article{width: 460px; float:left;}
-#main_article{width: 500px; float:right;}
+#map_image{width: 500px; float:right;}
 figure{margin: 0; padding: 0;}
