--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -18,7 +18,7 @@
 					<p>njh</p>
 					<p>njh</p>
 				</article>
-				<figure id=-"map_image">
+				<figure id="map_image">
 				</figure>
 			</section>
 		</div>
