--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -15,8 +15,8 @@
 					<p>njh</p>
 					<p>njh</p>
 					<p>njh</p>
-					<p>njh</p>
-					<p>njh</p>
+					<p>Soth Korea Map</p>
+					<p>Converted SVG to JSON</p>
 				</article>
 				<figure id="map_image">
 				</figure>
