update java script

--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -10,15 +10,16 @@
 	<div id ="koreamap">
 		<div class="container-fluid">
 			<section id="main_section">
-				<article id="main_article">
+				<article id= "main_article">
 					<p>njh</p>
 					<p>njh</p>
 					<p>njh</p>
 					<p>njh</p>
-					<p>Soth Korea Map</p>
+					<p>South Korea Map</p>
 					<p>Converted SVG to JSON</p>
+					<p>Under Construction random color</p>
 				</article>
-				<figure id="map_image">
+				<figure id= "map_image">
 				</figure>
 			</section>
 		</div>
