--- a/src/main/resources/static/css/koreamap.css
+++ b/src/main/resources/static/css/koreamap.css
@@ -1,6 +1,12 @@
-#koreamap {width:960px; margin: 0 auto;}
+#koreamap {width: 960px; margin: 0 auto;}
 
-#main_section{overfolw: hidden;}
-#main_article{width: 460px; float:left;}
-#map_image{width: 500px; float:right;}
-figure{margin: 0; padding: 0;}
+#main_section {overflow: hidden;}
+#main_article {
+	width: 460px; 
+	float: left;
+	}
+#map_image {
+	width: 500px; 
+	float: right;
+	}
+figure {margin: 0; padding: 0;}
