--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -17,7 +17,7 @@
 					<p>njh</p>
 					<p>South Korea Map</p>
 					<p>Converted SVG to JSON</p>
-					<p>Under Construction random color</p>
+					<p>Under Construction random color(2020/06/04)</p>
 				</article>
 				<figure id= "map_image">
 				</figure>
