--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -9,7 +9,7 @@
 	{{> include/navigation}}
 	<div id ="koreamap">
 		<div class="container-fluid">
-			<section id="main_section">
+			<section id="map_section">
 				<article id= "main_article">
 					<p>njh</p>
 					<p>njh</p>
