--- a/src/main/resources/static/css/koreamap.css
+++ b/src/main/resources/static/css/koreamap.css
@@ -1,8 +1,8 @@
 #koreamap {width: 960px; margin: 0 auto;}
 
-#main_section {overflow: hidden;}
+#map_section {overflow: hidden;}
 #main_article {
-	width: 460px; 
+	width: 430px; 
 	float: left;
 	}
 #map_image {
