--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -1,3 +1,4 @@
+<div>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <title>JINHYUN Spring Boot Alpha</title>
@@ -16,9 +17,10 @@
 <script src="/js/koreaMapPathData.js"></script>
 <script src="/js/raphael.js"></script>
 <style>
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
-    }
-</style>    
+/* Add a gray background color and some padding to the footer */
+footer {
+	background-color: #f2f2f2;
+	padding: 25px;
+}
+</style>
+</div>
