--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -90,8 +90,9 @@ h3,h4,h5 {
 
 /* template layout*/
 #subnav {
- position:fixed;
- width:100%;
+ position: fixed;
+ width: 100%;
+ top: 0;
 }
 
 @media (max-width: 768px) {
