--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -7,19 +7,52 @@
 
 <body>
 	{{> include/navigation}}
-	<div id ="koreamap">
+	<div id="koreamap">
 		<div class="container-fluid">
 			<section id="map_section">
-				<article id= "main_article">
-					<p>njh</p>
-					<p>njh</p>
-					<p>njh</p>
-					<p>njh</p>
-					<p>South Korea Map</p>
+				<article id="main_article">
+					<h1 align="center">South Korea Map</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Aenean imperdiet, lacus non tristique volutpat, metus dolor varius
+						dolor, eu venenatis justo lacus id ligula. Suspendisse blandit mi
+						sed metus vehicula, eu rutrum ante imperdiet. Sed sit amet iaculis
+						turpis, sit amet pulvinar nulla. Fusce eu accumsan diam. Proin
+						vitae auctor quam. Donec sed facilisis lectus. Nam ac elit
+						finibus, vulputate purus sed, venenatis arcu. Nulla at commodo
+						lectus. Etiam bibendum odio non mollis posuere. Aliquam fermentum
+						luctus felis at pharetra.</p>
+					<p>Nunc elementum rhoncus tempus. Aenean rutrum ex vitae odio
+						varius, ac vehicula nisl malesuada. Proin tincidunt dolor eu
+						tortor venenatis volutpat. Phasellus mollis blandit nulla, in
+						elementum mi commodo sit amet. Maecenas efficitur eleifend luctus.
+						Donec accumsan blandit est et aliquet. Praesent vitae libero
+						suscipit, finibus magna id, feugiat purus. Pellentesque vitae elit
+						sed dui aliquet rutrum vitae gravida ligula. Vivamus consectetur,
+						nunc eu sodales cursus, ante nunc hendrerit ex, ac efficitur
+						tortor arcu ac nisl. Aenean porttitor, diam at placerat egestas,
+						tellus lacus dictum diam, ut porttitor diam ante et ipsum. Aenean
+						porta justo a magna mollis sodales. Pellentesque malesuada tempor
+						malesuada. Etiam augue odio, cursus sodales interdum mattis,
+						pellentesque sed velit. Nam fermentum, ex nec faucibus iaculis,
+						nisi urna sollicitudin dui, at pulvinar nisi nibh vitae ex. Nam
+						viverra metus at bibendum malesuada. Nulla in pharetra lacus.</p>
+					<p>Integer scelerisque urna quis iaculis fringilla. Donec
+						efficitur, neque quis semper gravida, ex tortor facilisis metus,
+						eget rutrum nulla nulla sit amet arcu. Cras eget lorem at felis
+						ornare aliquet nec id elit. Nulla facilisi. Vestibulum nec luctus
+						dolor. Quisque non volutpat nisi, non feugiat est. Nulla erat
+						quam, semper nec tortor in, sollicitudin ullamcorper ex. Donec
+						accumsan nulla dui, eu iaculis turpis bibendum in. Phasellus nibh
+						metus, placerat at rhoncus vitae, dignissim nec purus. Nulla non
+						aliquam neque. Nunc faucibus orci vitae suscipit molestie. Fusce
+						et leo sed purus mollis feugiat. Nunc diam quam, dapibus eu nisi
+						sed, accumsan commodo est. Vivamus nunc quam, suscipit nec ipsum
+						a, suscipit pretium tortor.</p>
+					</p>
 					<p>Converted SVG to JSON</p>
 					<p>Under Construction random color(2020/06/04)</p>
 				</article>
-				<figure id= "map_image">
+				<figure id="map_image">
 				</figure>
 			</section>
 		</div>
