--- a/src/main/resources/templates/navigation/koreamap.html
+++ b/src/main/resources/templates/navigation/koreamap.html
@@ -49,8 +49,7 @@
 						sed, accumsan commodo est. Vivamus nunc quam, suscipit nec ipsum
 						a, suscipit pretium tortor.</p>
 					</p>
-					<p>Converted SVG to JSON</p>
-					<p>Under Construction random color(2020/06/04)</p>
+					<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 				</article>
 				<figure id="map_image">
 				</figure>
