--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -78,10 +78,10 @@
 						data-placement="top" title="About">About</a></li>
 					<li><a href="/foodblog" data-toggle="tooltip"
 						data-placement="top" title="FoodBlog">FoodBlog</a></li>
-					<li><a href="/board" data-toggle="tooltip"
-						data-placement="top" title="Board">Board</a></li>
 					<li><a href="/koreamap" data-toggle="tooltip"
 						data-placement="top" title="KoreaMap">Korea Map</a></li>
+					<li><a href="#" data-toggle="tooltip"
+						data-placement="top" title="TBD">TBD</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{^sessionedUser}}
