--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -81,7 +81,7 @@
 					<li><a href="/koreamap" data-toggle="tooltip"
 						data-placement="top" title="KoreaMap">Korea Map</a></li>
 					<li><a href="#" data-toggle="tooltip"
-						data-placement="top" title="TBD">TBD</a></li>
+						data-placement="top" title="TBD">TBD(Under Construction)</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{^sessionedUser}}
