--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -155,9 +155,9 @@
 								</div>
 								<div id="youtube">
 									<iframe width="513" height="312"
-										src="https://www.youtube.com/embed/rvUfekJhyeg"
+										src="https://www.youtube.com/embed/pN3UDBZmSZ0"
 										frameborder="0"
-										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; overflow: hidden"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
 								</div>
 							</div>
@@ -648,8 +648,9 @@
 								<h3>요구사항</h3>
 								<br />가. 달걀과 가다랑어국물(가쓰오다시), 소금, 설탕, 맛술(미림)을 섞은 후 체에 걸러 사용하시오.
 								<br />나. 젓가락을 사용하여 달걀말이를 한 후 김발을 이용하여 사각모양을 만드시오.
-								<br />   (단, 달걀을 말 때 주걱이나 손을 사용할 경우 감점 처리)
-								<br />다. 길이 8cm, 높이 2.5cm, 두께 1cm 정도로 썰어 8개를 만들고, 완성되었을 때 틈새가 없도록 하시오.
+								<br /> (단, 달걀을 말 때 주걱이나 손을 사용할 경우 감점 처리)
+								<br />다. 길이 8cm, 높이 2.5cm, 두께 1cm 정도로 썰어 8개를 만들고, 완성되었을 때 틈새가
+								없도록 하시오.
 								<br />라. 달걀말이(다시마끼)와 간장무즙을 접시에 보기 좋게 담아내시오.
 							</ol>
 						</section>
@@ -719,7 +720,7 @@
 								<br />
 								<h3>요구사항</h3>
 								<br />가. 삼치는 세장뜨기한 후 소금을 뿌려 10~20분 후 씻고 쇠꼬챙이에 끼워 구워내시오.
-								<br />   (단, 석쇠를 사용할 경우 감점 처리)
+								<br /> (단, 석쇠를 사용할 경우 감점 처리)
 								<br />나. 채소는 각각 초담금 및 조림을 하시오
 								<br />다. 구이 그릇에 삼치소금구이와 곁들임을 담아 완성하시오
 								<br />라. 길이 10cm정도로 2조각을 제출하시오.
