--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -15,7 +15,7 @@
 			<br />
 			<div class="row content">
 				<div class="col-sm-3 sidenav"
-					style="background-color: #c4f9fc; height: 2300px;">
+					style="background-color: #c4f9fc; height: 2200px;">
 					<br />
 					<h3 align="center">
 						<div style="color: #0d26be;">The Table of Contents</div>
@@ -44,11 +44,11 @@
 											<img src="images/coffee.jpg" alt="coffee">
 										</div>
 										<div class="text">
-											<p>I’m the man who doesn’t give up challenges, enjoy
+											<p1>I’m the man who doesn’t give up challenges, enjoy
 												working with co-worker, and I always love the job that
 												challenges me to improve or solve programs when I meet
 												unexpected problems. I. I strongly believe that my attitude
-												and skill background make me a good person.</p>
+												and skill background make me a good person.</p1>
 										</div>
 									</div>
 								</section>
@@ -64,10 +64,10 @@
 												alt="direct connected with subway Station">
 										</div>
 										<div class="text">
-											<p>5162 Yonge St, North York</p>
-											<p>Near by North York Centre Station</p>
-											<p>I am work in North York, Toronto</p>
-											<p>I am work for JT Chinae Branch of Toronto</p>
+											<p1>5162 Yonge St, North York</p1>
+											<p1>Near by North York Centre Station</p1>
+											<p1>I am work in North York, Toronto</p1>
+											<p1>I am work for JT Chinae Branch of Toronto</p1>
 										</div>
 									</div>
 								</section>
@@ -113,15 +113,15 @@
 													<a href="http://loan.jtchinae-bank.co.kr" target="_blank">JT
 														Loan Site</a>
 													<h1>portfolio 1</h1>
-													<p>Direct Loan Site for Customer</p>
-													<p>Wep Application Developer</p>
+													<p1>Direct Loan Site for Customer</p1>
+													<p1>Wep Application Developer</p1>
 												</div></li>
 											<li><img src="images/JTBank.jpg">
 												<div class="caption">
 													<a href="http://jt-bank.co.kr" target="_blank">JT Bank</a>
 													<h1>portpolio 2</h1>
-													<p>JT Bank Official Homepage</p>
-													<p>Wep Application Developer</p>
+													<p1>JT Bank Official Homepage</p1>
+													<p1>Wep Application Developer</p1>
 												</div></li>
 										</ul>
 									</div>
@@ -133,12 +133,6 @@
 									src="./images/arrow-up.png"
 									style="margin-bottom: 24px; width: 45px;">
 								</a>
-
-								<footer>
-									<p>Always God bless us~!</p>
-									<a href="./interview.html">interview</a>
-								</footer>
-
 							</div>
 						</div>
 					</div>
@@ -147,7 +141,6 @@
 			</div>
 		</div>
 	</div>
-
 	{{> include/footer}}
 </body>
 </html>
