--- a/src/main/resources/templates/navigation/about.html
+++ b/src/main/resources/templates/navigation/about.html
@@ -120,7 +120,7 @@
 												<div class="caption">
 													<a href="http://jt-bank.co.kr" target="_blank">JT Bank</a>
 													<h1>portpolio 2</h1>
-													<p1>JT Bank Official Homepage</p1>
+													<p1>JT Bank official Homepage</p1>
 													<p1>Wep Application Developer</p1>
 												</div></li>
 										</ul>
