--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>{{> include/header}}
+<link rel="stylesheet" href="/css/about.css" type="text/css">
 </head>
 
 <body>
