--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>{{> include/header}}
+<head>
+{{> include/header}}
 <link rel="stylesheet" href="/css/about.css" type="text/css">
 </head>
 
@@ -42,24 +43,22 @@
 				</div>
 
 				<div class="col-sm-9">
-					<br />
-					<div
-						style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center; height: 70px;">Food
-						blog</div>
-
-
 					<div
 						style="line-height: 200.0%; background-color: #ffffff; text-align: justify; margin-top: 12.0pt;">
+						<br />
+						<div
+							style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center; height: 70px;">Food
+							blog</div>
 						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br /> <br /> <br />
+							<br />
 							<h1 style="text-align: center;">소고기덮밥(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_143812.jpg" alt="picture 1"
-										width="513" height="312">
+										width="100%" height="100%">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="100%" height="100%"
 										src="https://www.youtube.com/embed/rvUfekJhyeg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
@@ -99,8 +98,8 @@
 							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="513"
-										height="312" align="center">
+									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="100%"
+										height="100%" align="center">
 								</div>
 								<div id="youtube">
 									<iframe width="513" height="312"
