--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -55,10 +55,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_143812.jpg" alt="picture 1"
-										width="100%" height="100%">
+										width="380" height="220">
 								</div>
 								<div id="youtube">
-									<iframe width="100%" height="100%"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/rvUfekJhyeg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
@@ -98,11 +98,11 @@
 							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="100%"
-										height="100%" align="center">
+									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="220"
+										height="240" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/7m_yRTn9wws"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -149,10 +149,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_163430.jpg" alt="picture 3"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/pN3UDBZmSZ0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -186,10 +186,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_163432.jpg" alt="picture 4"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/SCaYHUfW81g"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -231,10 +231,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145051.jpg" alt="picture 5"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/UZoBfp89G8U"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -269,10 +269,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145054.jpg" alt="picture 6"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/ToOBDQI8eFg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -307,10 +307,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_173912.jpg" alt="picture 7"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/BrhKehtXrFA"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -344,10 +344,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_163756.jpg" alt="picture 8"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/Pkd46M8AuWI"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -381,10 +381,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144207.jpg" alt="picture 9"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/kFto3sXBovE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -417,10 +417,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144210.jpg" alt="picture 10"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/uXr3qv9wgU8"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -449,10 +449,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162528.jpg" alt="picture 11"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/6EqVGz5_NK0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -481,10 +481,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162530.jpg" alt="picture 12"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/FBtL0BaVpNg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -516,10 +516,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_143557.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/kS-Cap2p9mw"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -550,10 +550,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_151850.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/KTVxZUqyixk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -584,10 +584,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_172610.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/9xG6Hl4FSpk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -623,10 +623,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_144453.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/wYxwqqSUrQY"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -659,10 +659,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_144457.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/IwSp8nJ-gnk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -694,10 +694,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_164014.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/7zZs6GJnORE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -731,10 +731,10 @@
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_164018.jpg" alt="picture 1"
-										width="513" height="312" align="center">
+										width="380" height="220" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="513" height="312"
+									<iframe width="380" height="220"
 										src="https://www.youtube.com/embed/wpQQTapwE_o"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
